# LRUcache

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init_repo.sh
2qCache/: 2qCache.hpp
LRUcache/include/: LRUcacheStruct.hpp
LRUcache/source/: LRUcache.cpp
cacheDriver/: CMakeLists.txt  main.cpp  plain_task.cpp
cacheImplementations/2qCache/: 2qCache.hpp
cacheRealizations/2qCache/: 2qCache.hpp
cacheRealizations/LRUcache/: LRUcache.hpp
cacheRealizations/prophecyCache/: prophecyCache.hpp
common/: listWithTrack.hpp
compare_hit_perf/: CMakeLists.txt  test_lru2q_cache_eff.cpp
prophecyCache/include/: prophecyCache.hpp
tests/: CMakeLists.txt  test_lru2q_cache_eff.cpp  tests.cpp  tests2.cpp  tests_lru2q_cache_corr.cpp  tests_lru_cache_corr.cpp  tests_proph_cache_corr.cpp  tests_structs.hpp
tests/check_corr/: tests_lru2q_cache_corr.cpp  tests_lru_cache_corr.cpp  tests_proph_cache_corr.cpp
tests/tests_configs/: 2q_cache.hpp  lru_cache.hpp  proph_cache.hpp
usecase/cacheDriver/: CMakeLists.txt  main.cpp
usecase/usecaseForTests/: CMakeLists.txt  plain_task.cpp
usecase/withInputValidation/: CMakeLists.txt  with_input_validation.cpp
webPage/: webPageStruct.hpp
webPage/include/: webPageStruct.hpp
webPage/source/: source.cpp
